update server folder

--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,7 @@
     "@clerk/express": "^1.7.14",
     "axios": "^1.11.0",
     "axios-retry": "^4.5.0",
+    "body-parser": "^2.2.0",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
