Email confirmation added

--- a/Server/package.json
+++ b/Server/package.json
@@ -23,6 +23,7 @@
     "express": "^5.1.0",
     "inngest": "^3.40.1",
     "mongoose": "^8.16.5",
+    "nodemailer": "^7.0.5",
     "stripe": "^18.4.0",
     "svix": "^1.71.0"
   }
