--- a/client/.env
+++ b/client/.env
@@ -1,7 +1,7 @@
 VITE_CURRENCY = '$'
 
-VITE_CLERK_PUBLISHABLE_KEY=pk_test_cHJvdWQtcGhvZW5peC01Ni5jbGVyay5hY2NvdW50cy5kZXYk
+VITE_CLERK_PUBLISHABLE_KEY=Your_API_Key
 
-VITE_BASE_URL = http://localhost:3000
+VITE_BASE_URL = Your_API_Key
 
-VITE_TMDB_IMAGE_BASE_URL = https://image.tmdb.org/t/p/original
+VITE_TMDB_IMAGE_BASE_URL = Your_API_Key
